--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "config": "^3.3.12",
+    "express": "^5.1.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/config": "^3.3.5",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
