--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/config": "^3.3.5",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2"
   }
