--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "puppeteer": "^24.8.1",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2"
