--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
+    "prisma": "^6.8.2",
     "puppeteer": "^24.8.1",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
