--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "dist",
-    "lib": ["es2023"],
+    "lib": ["es2023", "dom"],
     "target": "es2022",
     "skipLibCheck": true,
     "module": "nodenext",
