--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@prisma/client": "^6.8.2",
     "config": "^3.3.12",
     "express": "^5.1.0",
+    "lodash": "^4.17.21",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/config": "^3.3.5",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.18",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
