Added jest-mock-extended for mocking prisma and joi for input file validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
 
     /* strict type checking options */
     "strict": true,
