--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.8.2",
     "config": "^3.3.12",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "typescript": "^5.8.3"
   },
@@ -23,7 +24,7 @@
     "@types/lodash": "^4.17.18",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "jest-mock-extended": "^4.0.0-beta1",
+    "jest-mock-extended": "^4.0.0",
     "prisma": "^6.8.2",
     "puppeteer": "^24.8.1",
     "supertest": "^7.1.0",
