--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "ts-jes-boilerplate",
   "author": "Luke Zigler <luke.zigler98@gmail.com>",
   "description": "Simple boilerplate application for implementing typescript with jest config for code katas",
+  "main": "./src/index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "webpack",
+    "watch": "NODE_ENV=development webpack --watch",
     "build": "tsc",
-    "dev": "ts-node src/index.ts",
+    "start:local": "ts-node src/index.ts",
+    "dev": "concurrently \"npm run watch\" \"npm run start:local\"",
     "test": "jest --coverage",
     "retrieve-data": "ts-node src/data/getData.ts"
   },
@@ -15,6 +18,9 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
+    "nunjucks": "^3.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -22,13 +28,28 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.18",
+    "@types/nunjucks": "^3.2.6",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/supertest": "^6.0.3",
+    "concurrently": "^9.2.0",
+    "copy-webpack-plugin": "^13.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0",
     "prisma": "^6.8.2",
     "puppeteer": "^24.8.1",
+    "simple-nunjucks-loader": "^3.2.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
-    "ts-node": "^10.9.2"
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
