--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "resolveJsonModule": true,
+    "jsx": "react",
 
     /* strict type checking options */
     "strict": true,
